# Clion-OpenGL

./: CMakeLists.txt  README.md
Dependencies/GLEW/lib/Release/MacOS/: libGLEW.dylib
OpenGL/src/: Application.cpp
